# HTXV2

./: .copilot-instructions.md  .devcontainer.json  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONSTITUTION.md  CONTAINER-QUICK-START.md  DEPLOYMENT_GUIDE.md  DEVCONTAINER_LAUNCH_REPORT.md  DEVELOPMENT_STATUS.md  Dockerfile  Fix-DockerIssues.ps1  Fix-GitRepositories.ps1  LICENSE  MCP-SETUP-GUIDE.md  MCP_LAUNCH_REPORT.md  MCP_README.md  MCP_STATUS.md  Makefile  PROJECT-READINESS-ANALYSIS.md  PROJECT_STRUCTURE.md  PR_CLEANUP_STRATEGY.md  PR_RESOLUTION_PLAN.md  Push-ToGitHub.ps1  README-GITHUB-ACTIONS.md  README-MCP.md  README-QUICKSTART.md  README.md  Start-HTXDockerProject.ps1  TEST_RESULTS_SUMMARY.md  Test-ContainerDeps.ps1  back-Codex.md  cleanup_prs.sh  docker-compose.build.yml  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml  (+25 more)
backend/: .env.example  Dockerfile  Dockerfile.optimized  MCP_README.md  README.md  alembic.ini  export_openapi.py  mcp_tester.py  pip-update-log.txt  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements-updated.txt  requirements.txt  requirements.txt.bak  sync_openapi.py  validate_core.py
backend/alembic/: env.py
backend/app/: config.py  errors.py  logging_setup.py  main.py  metrics.py  middleware.py  middleware_api_keys.py  middleware_ratelimit.py
backend/tests/: README.md  conftest.py  run_edge_case_tests.py  run_extended_edge_tests.py  test_analysis.py  test_api_keys_endpoints.py  test_coingecko.py  test_coins.py  test_health.py  test_htx.py  test_main.py  (+10 more)
(+474 files in other folders)
